vlib/v/checker/tests/float_lit_too_many_points_err.vv
fn main() {
    println(123.45.67)
}
